tests/ui/traits/next-solver/cycles/cycle-modulo-ambig-aliases.stderr
error[E0275]: overflow evaluating the requirement `&_: Typed`
  --> $DIR/cycle-modulo-ambig-aliases.rs:87:11
   |
LL |     foo::<&_>();
   |           ^^
   |
note: required by a bound in `foo`
  --> $DIR/cycle-modulo-ambig-aliases.rs:84:11
   |
LL | fn foo<T: Typed>() {}
   |           ^^^^^ required by this bound in `foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0275`.
